<resources>

    <string name="app_name">SaveAndQuit</string>
    <string name="check_in">Check In</string>
    <string name="reset_data">Reset Data</string>
    <string name="extra_life">Extra Life</string>
    <string name="money_saved">Money Saved</string>
    <string name="_0_00">$0.00</string>
    <string name="_0.0_Hrs">0.0 Hrs</string>
    <string name="quote">Quote</string>
    <string name="submit">Submit</string>
    <string name="cigPackCost">How much is a pack of cigarettes?</string>
    <string name="cigsPerDay">How many cigarettes do you smoke a day?</string>
    <string name="cigsInPack">How many cigarettes are in a pack?</string>
    <string name="delete_user">Delete User</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="deleteUserPrompt">Are you sure you want to delete user?</string>
    <string name="aboutSummary">An Android app that helps smokers track how much time and money they save by not smoking.</string>
    <string name="copyright">© 2018 Kwistech</string>
    <string name="developer">Developed by: Kwistech</string>
    <string name="save_and_quit">Save and Quit</string>
    <string name="kwistech_logo">Kwistech logo</string>
    <string name="created_account">Created a new user account!</string>
    <string name="field_value_range">Field values must be in range of 1 - 100</string>
    <string name="fill_out_fields">Please fill out all fields!</string>
    <string name="deleted_user">Deleted user!</string>
    <string name="checked_in">Successfully checked in!</string>

</resources>
