<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/moneySavedField"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/extraLifeText"
        android:layout_marginStart="42dp"
        android:paddingTop="25dp"
        android:text="@string/_0_00"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/benchnine_bold"
        android:lineSpacingExtra="8sp"
        android:padding="25dp"
        android:text="@string/quote"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/checkInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:onClick="onCheckInButton"
        android:text="@string/check_in"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/moneySavedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/moneySavedField"
        android:layout_marginTop="150dp"
        android:paddingTop="25dp"
        android:text="@string/money_saved"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/extraLifeText"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/extraLifeField"
        android:layout_alignTop="@+id/moneySavedText"
        android:paddingTop="25dp"
        android:text="@string/extra_life"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/extraLifeField"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/moneySavedField"
        android:layout_marginEnd="47dp"
        android:paddingTop="25dp"
        android:text="@string/_0.0_Hrs"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

</android.widget.RelativeLayout>