<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/deleteUserTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:text="@string/delete_user"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="166dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/confirmButton"
        android:background="@color/colorPrimary"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="136dp" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="166dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="97dp"
        android:background="@color/colorPrimary"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/deleteUserContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:text="@string/are_you_sure_you_want_to_delete_user"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="72dp" />
</android.widget.RelativeLayout>